tests/analyzer/errors/fn_call.rv
fn add(arg1: str) {}
fn sub(arg1: float, args2: bool) {}


fn main() {
    add(1)
    add(1, 2)
    sub(4.5)
    var a = add("hoy")
}
